--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
 				<img src="images/R.jpg" alt="animals" class="round">
 				<p>Facts about Coyote's</p>
 				<ul class="tablet-desktop">
-					<li>When prey is hard to find Coyotes will eat wild berries and fruits</li>
-					<li>young are born blind in an underground burrow</li>
+					<p>When prey is hard to find Coyotes will eat wild berries and fruits</p>
+					<p>young are born blind in an underground burrow</p>
 					<li></li>
 				</ul>
 			
@@ -56,9 +56,9 @@
 				<img src="images/kiwi.jpg" alt="animals" class="round">
 				<p>Facts about Kiwi's</p>
 				<ul class="tablet-desktop">
-					<li>Kiwis are flightless</li>
-					<li>Kiwis are the smallest of the flightless birds</li>
-					<li>Kiwis are nocturnal because of predators</li>
+					<p>Kiwis are flightless</p>
+					<p>Kiwis are the smallest of the flightless birds</p>
+					<p>Kiwis are nocturnal because of predators</p>
 				</ul>
 			</section>
 			
